--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.0.1",
     "tailwindcss": "^1.2.0",
     "typescript": "~3.7.2"
   },
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.0.1",
     "autoprefixer": "^9.7.5",
     "postcss-cli": "^7.1.0"
   }
